The first day blog!

--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
 <body>
     <h1>Welcome to My CS + Game Dev Blog</h1>
     <p>I'm documenting my projects here.</p>
+
+    <h2>2025-05-07</h2>
+    <h2>2025-05-07</h2>
+<p>Hello everyone! My name is Weibo Lin. I'm a high school student in Canada and I love computer science and game development. In my free time, I enjoy coding, writing stories and playing video games. I also play badminton and ski.</p>
+
+<p>Right now, I'm learning more about game design and computer science while developing my own game project. My goal is to be admitted to the Computer Science program at the University of Toronto, St. George campus.</p>
+
+<p>I will continue to improve the functionality of this website and add more information about myself and my projects. That's all for today!</p>
+    
 </body>
 </html>
