add the introduction about myself

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>Welcome to My CS + Game Dev Blog</h1>
+    <a href="intro.html">About Me</a>
     <p>I'm documenting my projects here.</p>
 
     <h2>2025-05-07</h2>
