--- a/intro.html
+++ b/intro.html
@@ -8,7 +8,7 @@
     <h1>About Me</h1>
 
     <h2>Introduction</h2>
-    <p>Hello! My name is Weibo Lin. I'm originally from China and currently a high school student in Canada. I've always been passionate about computer science and game design. These interests have motivated me to keep learning programming in my spare time.</p>
+    <p>Hello! My name is Weibo Lin. I'm from China and currently a high school student in Canada. I love computer science and game design. These interests have motivated me to keep learning programming in my spare time.</p>
     <p>While studying programming, I also enjoy taking on different challenges. Since moving to Canada, I have participated in the Waterloo Mathematics Contest every year. I've also competed in the CyberPatriot cybersecurity competition, gaining hands-on experience in system protection.</p>
     <p>Outside of academics, I enjoy playing badminton and skiing. These activities have taught me the value of perseverance and discipline.</p>
 
@@ -18,7 +18,7 @@
 
     <h2>My Skills</h2>
     <ul>
-        <li><strong>Programming Languages:</strong> I'm still learning, but I'm confident that I'll master many more as I continue to study.</li>
+        <li><strong>Programming Languages:</strong> I'm still learning, but I'm confident that I'll master much more as I continue to study.</li>
         <li><strong>Game Development:</strong> I've studied game design, level design, narrative design, and story writing. I work with Unity 2D and C#, and I can create small indie games.</li>
         <li><strong>Cybersecurity:</strong> I've gained hands-on experience in system defense through the CyberPatriot competition. I also know how to use Linux commands and write Bash scripts.</li>
         <li><strong>Web Development:</strong> I'm familiar with HTML and CSS, and I'm currently working to improve my skills in this area.</li>
