add may 8th blog, and add link to the main page in intro page

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
 
 <p>I will continue to improve the functionality of this website and add more information about myself and my projects. That's all for today!</p>
     
+<h2>2025-05-08</h2>
+<p>Add the Introduction page!</p>
 </body>
 </html>
