--- a/intro.html
+++ b/intro.html
@@ -23,5 +23,6 @@
         <li><strong>Cybersecurity:</strong> I've gained hands-on experience in system defense through the CyberPatriot competition. I also know how to use Linux commands and write Bash scripts.</li>
         <li><strong>Web Development:</strong> I'm familiar with HTML and CSS, and I'm currently working to improve my skills in this area.</li>
     </ul>
+    <a href="index.html">About Me</a>
 </body>
 </html>
