--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>My Blog</title>
 </head>
 <body>
     <h1>Welcome to My CS + Game Dev Blog</h1>
     <a href="intro.html">About Me</a>
+    <a href="certificates.html">My certificates</a>
     <p>I'm documenting my projects here.</p>
 
     <h2>2025-05-07</h2>
