Try to fix the pictures doesn't show

--- a/certificates.html
+++ b/certificates.html
@@ -12,13 +12,13 @@
     <h2>🖥️ Programming Certificates</h2>
     <h3>Coursera - Introduction to Unity and C#</h3>
     <p>Completed a course by the University of Colorado covering Unity basics and C# programming.</p>
-    <img src="images/Intoduce to C#.jpg" alt="Coursera Unity and C# Certificate" width="500">
+    <img src="images/Intoduce_to_C#.jpg" alt="Coursera Unity and C# Certificate" width="500">
 
     <!-- Game Design Certificates -->
     <h2>🎮 Game Design Certificates</h2>
     <h3>Udemy - Level Design Master</h3>
     <p>A comprehensive course on professional level design techniques used in modern game development.</p>
-    <img src="images/Level Design.jpg" alt="Udemy Level Design Certificate" width="500">
+    <img src="images/Level_Design.jpg alt="Udemy Level Design Certificate" width="500">
 
     <!-- Math and Competitions -->
     <h2>Mathematics and Competitions</h2>
