--- a/certificates.html
+++ b/certificates.html
@@ -12,19 +12,19 @@
     <h2>🖥️ Programming Certificates</h2>
     <h3>Coursera - Introduction to Unity and C#</h3>
     <p>Completed a course by the University of Colorado covering Unity basics and C# programming.</p>
-    <img src="images/Intoduce_to_C#.jpg" alt="Coursera Unity and C# Certificate" width="500">
+    <img src="Images/Intoduce_to_C#.jpg" alt="Coursera Unity and C# Certificate" width="500">
 
     <!-- Game Design Certificates -->
     <h2>🎮 Game Design Certificates</h2>
     <h3>Udemy - Level Design Master</h3>
     <p>A comprehensive course on professional level design techniques used in modern game development.</p>
-    <img src="images/Level_Design.jpg alt="Udemy Level Design Certificate" width="500">
+    <img src="Iages/Level_Design.jpg alt="Udemy Level Design Certificate" width="500">
 
     <!-- Math and Competitions -->
     <h2>Mathematics and Competitions</h2>
     <h3>Waterloo Math Contest</h3>
     <p>Top 25% in Canada, First Place in my school (Fryer).</p>
-    <img src="images/Mathcontest.jpg" alt="Waterloo Math Certificate" width="500">
+    <img src="Images/Mathcontest.jpg" alt="Waterloo Math Certificate" width="500">
 
     <p><a href="index.html">Back to Home</a></p>
 </body>
