fix the problem

--- a/certificates.html
+++ b/certificates.html
@@ -18,7 +18,7 @@
     <h2>🎮 Game Design Certificates</h2>
     <h3>Udemy - Level Design Master</h3>
     <p>A comprehensive course on professional level design techniques used in modern game development.</p>
-    <img src="Iages/Level_Design.jpg alt="Udemy Level Design Certificate" width="500">
+    <img src="Images/Level_Design.jpg" alt="Level Design Certificate" width="500">
 
     <!-- Math and Competitions -->
     <h2>Mathematics and Competitions</h2>
