--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Welcome to My CS + Game Dev Blog</h1>
-    <a href="intro.html">About Me</a>
+    <a href="intro.html">About Me</a><br>
     <a href="certificates.html">My certificates</a>
     <p>I'm documenting my projects here.</p>
 
