Update the blog!

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     
 <h2>2025-05-08</h2>
 <p>Add the Introduction page!</p>
+
+<h2>2025-05-13</h2>
+<p>Add the certificates page!</p>
 </body>
 </html>
