--- a/certificates.html
+++ b/certificates.html
@@ -12,7 +12,7 @@
     <h2>Programming Certificates</h2>
     <h3>Coursera - Introduction to Unity and C#</h3>
     <p>Completed a course by the University of Colorado covering Unity basics and C# programming.</p>
-    <img src="Images/IntoducetoC#.jpg" alt="Coursera Unity and C# Certificate" width="500">
+    <img src="Images/IntoducetoUnity.jpg" alt="Coursera Unity and C# Certificate" width="500">
 
     <!-- Game Design Certificates -->
     <h2>Game Design Certificates</h2>
