add a new project page and add first project

--- a/blog.html
+++ b/blog.html
@@ -6,9 +6,15 @@
 </head>
 <body>
 <h1>Welcome to My CS + Game Dev Blog</h1>
-<a href="index.html">Home page</a><br>
-<a href="certificates.html">My certificates</a>
-<p>I'm documenting my projects here.</p>
+<p><a href="index.html">Back to Home</a></p>
+<p>This blog records my learning journey and personal projects.</p>
+
+<h2>2025-07-16</h2>
+<p>
+  Today I added a new page to my website called projects. This page is meant to showcase the personal projects I'm currently working on or have already completed.<br>
+  I also added my first project entry: <em>Not Home Anymore</em> — a text-based survival game about environmental collapse and resilience, built using Twine.<br>
+  I'm planning to add more projects here soon.
+</p>
 
 <h2>2025-07-08</h2>
 <p>
