--- a/index.html
+++ b/index.html
@@ -6,24 +6,25 @@
 </head>
 <body>
 
-<nav>
-    <a href="blog.html">Blog</a> |
-    <a href="certificates.html">Certificates</a>
-</nav>
+    <nav>
+        <a href="blog.html">Blog</a> |
+        <a href="project.html">Projects</a> |
+        <a href="certificates.html">Certificates</a> |
+
+    </nav>
 
 
-<h1>Welcome to My Portfolio</h1>
-<p>Hello! I’m Weibo Lin, a high school student with a strong interest in computer science, game development, and artificial intelligence. This site is where I share my personal projects, what I’ve been learning, and the goals I’m working toward.</p>
+    <h1>Welcome to My Portfolio</h1>
+    <p>Hello! I’m Weibo Lin, a high school student with a strong interest in computer science, game development, and artificial intelligence. This site is where I share my personal projects, what I’ve been learning, and the goals I’m working toward.</p>
 
-<h2>About Me</h2>
-<p>I'm from China and currently a high school student in Canada. I love computer science and game design. These passions have led me to pursue programming independently in my free time.</p>
-<p>While learning programming, I often look for new challenges to push myself further. After moving to Canada, I started taking part in the Waterloo Math Contests every year. I also joined the CyberPatriot cybersecurity competition, which gave me my first real hands-on experience in defending systems under pressure.</p>
-<p>I also play badminton and ski whenever I get the chance. Both sports have challenged me and taught me how to stay focused, bounce back from mistakes, and keep pushing forward.</p>
+    <h2>About Me</h2>
+    <p>I'm from China and currently a high school student in Canada. I love computer science and game design. These passions have led me to pursue programming independently in my free time.</p>
+    <p>While learning programming, I often look for new challenges to push myself further. After moving to Canada, I started taking part in the Waterloo Math Contests every year. I also joined the CyberPatriot cybersecurity competition, which gave me my first real hands-on experience in defending systems under pressure.</p>
+    <p>I also play badminton and ski whenever I get the chance. Both sports have challenged me and taught me how to stay focused, bounce back from mistakes, and keep pushing forward.</p>
 
-<h2>My Goals</h2>
-<p>I'm deeply interested in computer science, game development, and artificial intelligence. Right now, I’m working through Harvard’s CS50 course series, which has helped me explore topics like Python, web development, and the fundamentals of AI. At the same, I’ve been diving into Unity and C# to improve my skills in building games from scratch. </p>
-<p>Computer science isn’t just a subject I enjoy—it’s something I want to explore deeply at university, especially in the fields of game development and AI.<br>
-For me, programming is more than problem-solving. It’s a way to express ideas, build experiences, and maybe even create systems that help people in the real world.</p>
-
+    <h2>My Goals</h2>
+    <p>I'm deeply interested in computer science, game development, and artificial intelligence. Right now, I’m working through Harvard’s CS50 course series, which has helped me explore topics like Python, web development, and the fundamentals of AI. At the same, I’ve been diving into Unity and C# to improve my skills in building games from scratch. </p>
+    <p>Computer science isn’t just a subject I enjoy—it’s something I want to explore deeply at university, especially in the fields of game development and AI.<br>
+    For me, programming is more than problem-solving. It’s a way to express ideas, build experiences, and maybe even create systems that help people in the real world.</p>
 </body>
 </html>
